# nursery_project

./: .env.sample  README.md  dogs_data.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  forms.py  models.py  services.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_alter_dog_dog_photo.py  0003_alter_breed_description_alter_dog_birthday_and_more.py  0004_alter_dog_dog_photo.py  0005_parent.py  0006_dog_owner.py
dogs/templates/dogs/: base.html  breed_list.html  breeds.html  dog_confirm_delete.html  dog_form.html  dog_list.html  dogs.html  index.html
dogs/templates/dogs/includes/: inc_breeds.html
dogs/templatetags/: my_tag.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
